apps/solr/ns.solr.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: solr
  name: solr
spec:
  finalizers:
    - kubernetes
