apps/solr/statefulset.yaml
---
# Source: solr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: incubator-solr-1-5-2
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: incubator-solr-1-5-2
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: solr-1.5.2
    app.kubernetes.io/component: server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "solr"
      app.kubernetes.io/instance: "incubator-solr-1-5-2"
      app.kubernetes.io/component: "server"
  serviceName: incubator-solr-1-5-2-headless
  replicas: 3
  updateStrategy:
        type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "solr"
        app.kubernetes.io/instance: "incubator-solr-1-5-2"
        app.kubernetes.io/component: "server"
      annotations:
        {}
    spec:      
      securityContext:
        fsGroup: 8983
        runAsUser: 8983
      affinity:
        {}
      tolerations:
        []
      terminationGracePeriodSeconds: 180
      volumes:
        - name: solr-xml
          configMap:
            name: incubator-solr-1-5-2-config-map
            items:
              - key: solr.xml
                path: solr.xml
      containers:
        - name: solr
          image: "solr:8.4.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8983
              name: solr-client
          livenessProbe:
            initialDelaySeconds: 45
            periodSeconds: 10
            httpGet:
              scheme: "HTTP"
              path: /solr/admin/info/system
              port: 8983
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              scheme: "HTTP"
              path: /solr/admin/info/system
              port: 8983
          volumeMounts:
            - name: incubator-solr-1-5-2-pvc
              mountPath: /opt/solr/server/home

  volumeClaimTemplates:
    - metadata:
        name: incubator-solr-1-5-2-pvc
        annotations:
          pv.beta.kubernetes.io/gid: "8983"
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
