apps/solr/service-headless.yaml
---
# Source: solr/templates/service-headless.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "incubator-solr-1-5-2-headless"
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: incubator-solr-1-5-2
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: solr-1.5.2
spec:
  clusterIP: "None"
  ports:
    - port: 8983
      name: "solr-headless"
  selector:
    app.kubernetes.io/name: "solr"
    app.kubernetes.io/instance: "incubator-solr-1-5-2"
    app.kubernetes.io/component: "server"
