apps/solr/service.yaml
---
# Source: solr/templates/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "incubator-solr-1-5-2-svc"
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: incubator-solr-1-5-2
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: solr-1.5.2
  annotations:
    {}
spec:
  type: "ClusterIP"
  ports:
    - port: 8983
      name: "solr-client"
  selector:
    app.kubernetes.io/name: "solr"
    app.kubernetes.io/instance: "incubator-solr-1-5-2"
    app.kubernetes.io/component: "server"
