apps/solr/zookeeper.service-headless.yaml
---
# Source: solr/charts/zookeeper/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: incubator-solr-1-5-2-zookeeper-headless
  labels:
    app: zookeeper
    chart: zookeeper-2.1.3
    release: incubator-solr-1-5-2
    heritage: Helm
spec:
  ports:
    - name: client
      port: 2181
      targetPort: client
      protocol: TCP
    - name: election
      port: 3888
      targetPort: election
      protocol: TCP
    - name: server
      port: 2888
      targetPort: server
      protocol: TCP
  selector:
    app: zookeeper
    release: incubator-solr-1-5-2
